--- a/portfolio.html
+++ b/portfolio.html
@@ -311,7 +311,7 @@
                 <label for="subscribe" class="label">Подпишитесь на рассылку</label>
     
                 <div class="sub-group">
-                    <input class="sub-input" type="mail" name="subscribe" id="subscribe" placeholder="E-mail">
+                    <input class="sub-input" type="email" name="subscribe" id="subscribe" placeholder="E-mail">
     
                     <button type="submit" class="sub-button">
                         Подписаться
