--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 <label for="subscribe" class="label" >Подпишитесь на рассылку</label>
 
                 <div class="sub-group">
-                    <input class="sub-input" type="mail" name="subscribe" id="subscribe" placeholder="E-mail">
+                    <input class="sub-input" type="email" name="subscribe" id="subscribe" placeholder="E-mail">
                     
                     <button type="submit" class="sub-button">
                         Подписаться
@@ -535,7 +535,7 @@
                         <li class="form-field">
                             <label for="mail" class="label">Почта</label>
                             <div class="form-group">
-                                    <input class="form-input" type="mail" name="mail" id="mail" />
+                                    <input class="form-input" type="email" name="mail" id="mail" />
                                     <svg class="form-icon" width="18" height="18">
                                         <use href="./images/icons.svg#email"></use>
                                     </svg>
