--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                         <li class="form-field">
                             <label for="name" class="label">Имя</label>
                                 <div class="form-group"> 
-                                    <input class="form-input" type="text" name="name" id="name" />
+                                    <input class="form-input" type="text" name="name" id="name" placeholder=" " />
                                     <svg class="form-icon" width="18" height="18">
                                         <use href="./images/icons.svg#user"></use>
                                     </svg>
@@ -526,7 +526,7 @@
                         <li class="form-field">
                             <label for="tel" class="label">Телефон</label>
                             <div class="form-group">
-                                    <input class="form-input" type="tel" name="tel" id="tel" />
+                                    <input class="form-input" type="tel" name="tel" id="tel" placeholder=" "/>
                                     <svg class="form-icon" width="18" height="18">
                                         <use href="./images/icons.svg#phone"></use>
                                     </svg>
@@ -535,7 +535,7 @@
                         <li class="form-field">
                             <label for="mail" class="label">Почта</label>
                             <div class="form-group">
-                                    <input class="form-input" type="email" name="mail" id="mail" />
+                                    <input class="form-input" type="email" name="mail" id="mail" placeholder=" "/>
                                     <svg class="form-icon" width="18" height="18">
                                         <use href="./images/icons.svg#email"></use>
                                     </svg>
