--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                                 </div>
                         </li>
                         <li class="form-field">
-                            <label for="mail" class="label">Почта</label>
+                            <label for="email" class="label">Почта</label>
                             <div class="form-group">
                                     <input class="form-input" type="email" name="mail" id="mail" placeholder=" "/>
                                     <svg class="form-icon" width="18" height="18">
